# drive

./: .directory
drive/: package-lock.json  package.json
drive/public/: index.html
drive/src/: App.js  index.css
drive/src/components/FileCard/: FileCard.css  FileCard.js
drive/src/components/HomePage/: HomePage.css  HomePage.js
drive/src/components/Navbar/: Navbar.css  Navbar.js
my-drive/: json-comand.txt  package-lock.json  package.json
my-drive/src/: App.css  App.tsx
my-drive/src/components/FileCard/: FileCard.css  FileCard.tsx
my-drive/src/components/FilesList/: FilesList.css  FilesList.tsx
my-drive/src/components/NavBar/: NavBar.css  Navbar.tsx
server/: .directory  .gitignore  Cargo.toml
server-my-drive/: Cargo.toml
server-my-drive/src/: lib.rs  main.rs
server-my-drive/src/database/: db.rs  mod.rs
server-my-drive/src/routes/: files.rs  responses.rs
server-my-drive/static/: hola.cpp
server/src/: .directory  lib.rs  main.rs  middleware.rs
server/src/database/: db.rs  mongo_connection.rs
server/src/routes/: files.rs  mod.rs  responses.rs
