[package]
name = "server-my-drive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
bytes = "1.1.0"
bson = { version = "2", features = ["chrono-0_4"] }
futures = "0.3.21"
mongodb = "2.1.0"
rocket = {version = "0.5.0-rc.1", features = ["json"] }
multipart = "0.18.0"
serde = { version = "1.0.136", features = ["derive"] }
tokio = "1.17.0"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
